[gd_scene load_steps=12 format=3 uid="uid://ctm65sp5itebm"]

[ext_resource type="Script" uid="uid://tuklkshuhjfr" path="res://scenes/character_select.gd" id="1_rpq25"]
[ext_resource type="Texture2D" uid="uid://cm5agouc04f0x" path="res://logo/picture/tele.png" id="1_sr2wn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gk21y"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nb21n"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uq28m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8y2c"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rt4t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22h0e"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h2j8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyo81"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1w4ot"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rpq25")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0787037
anchor_bottom = 0.0709877
offset_right = 1150.0
offset_bottom = 641.0
texture = ExtResource("1_sr2wn")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CharacterDisplay" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 257.0
offset_top = 103.0
offset_right = 893.0
offset_bottom = 389.0
expand_mode = 1

[node name="LeftArrow" type="Button" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 467.0
offset_right = 503.0
offset_bottom = 558.0
theme_override_styles/hover = SubResource("StyleBoxFlat_gk21y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nb21n")
theme_override_styles/normal = SubResource("StyleBoxFlat_uq28m")

[node name="RightArrow" type="Button" parent="."]
layout_mode = 0
offset_left = 656.0
offset_top = 472.0
offset_right = 820.0
offset_bottom = 555.0
theme_override_styles/hover = SubResource("StyleBoxFlat_d8y2c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7rt4t")
theme_override_styles/normal = SubResource("StyleBoxFlat_22h0e")

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 967.0
offset_top = 525.0
offset_right = 1140.0
offset_bottom = 618.0
theme_override_styles/hover = SubResource("StyleBoxFlat_1h2j8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yyo81")
theme_override_styles/normal = SubResource("StyleBoxFlat_1w4ot")
text = "Ready"
